added login and register pages

--- a/src/pages/settings/Settings.css
+++ b/src/pages/settings/Settings.css
@@ -69,6 +69,10 @@
     border-bottom: 1px solid lightgray;
 }
 
+.settingsForm > input:focus {
+    outline: none;
+}
+
 .settingsSubmit {
     width: 150px;
     align-self: center;
